name:                csvcol
version:             0.1.0.0
synopsis:            Parse CSV data and format it into a human-readable table
description:         Please see README.md
homepage:            https://github.com/mhweaver/csvcol#readme
license:             BSD3
license-file:        LICENSE
author:              mhweaver
maintainer:          mhweaver@mhweaver.com
copyright:           2016 mhweaver
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , ListLike
  default-language:    Haskell2010

executable csvcol
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         
  build-depends:       base
                     , csvcol
                     , cassava >= 0.4.5.0
                     , bytestring
                     , vector
  default-language:    Haskell2010

test-suite csvcol-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , csvcol
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mhweaver/csvcol
